fix map visible for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -2476,6 +2476,10 @@ br {
         width: 540px;
     }
 
+    .form_map{
+        width: auto;
+    }
+
     .new {
         flex-wrap: wrap;
     }
